syntax = "proto3";
option java_multiple_files = true;

option java_package = "com.Fan";

service FanService{
	rpc ShowDeviceStatus(GetDeviceByIdRequest) returns (FanInfoResponse) {};
	rpc SetSpeed(GetSpeedRequest) returns (FanInfoResponse) {};
	rpc TurnOffFan(GetDeviceByIdRequest) returns (FanInfoResponse) {};
}

message FanInfo {
	int32 device_id = 1;
	string location = 2;
	int32 speed = 3;
}

message GetDeviceByIdRequest{
	int32 device_id = 1;
}

message GetSpeedRequest {
	int32 device_id = 1;
	int32 speed = 2;
}

message FanInfoResponse {
	FanInfo faninfo = 1;
}
